# 42-webserv

./: .gitignore  Dockerfile  Makefile  README.md  client.cpp  docker-compose.yml  main.cpp  server.cpp  test.txt  webserv  webserv.drawio
.github/workflows/: auto_close_done_issues.yml  googleTestcpp.yml  test.yml
autoindex/: autoindex.py
autoindex/templates/: 404.html
cnf/: ExclusivePath.cpp  ExclusivePath.hpp  Locations.cpp  Locations.hpp  MainConfig.cpp  MainConfig.hpp  Servers.cpp  Servers.hpp
configrations/: autoindex.conf  default.conf
docs/: autoindex.html
docs/autoindex/: app.py  autoindex.html
docs/error_page/: 404.html  500.html
docs/infinite/: method.sh
docs/py-files/: app.py  get.html  post.html  view_001.html  view_002.html
docs/python/: app.py
docs/python-infinite/: app.py
docs/shell/: infinite.sh
docs/www/: default.html  (+2 more)
env/: pyvenv.cfg
googletest/: CMakeLists.txt  a.out  addtestfile.txt  execTest.sh  mainTest.cpp
http/: Controller.cpp  Controller.hpp  DeleteRequest.cpp  DeleteRequest.hpp  ExecCgi.cpp  ExecCgi.hpp  GetRequest.cpp  GetRequest.hpp  PostRequest.cpp  PostRequest.hpp  Request.cpp  Request.hpp  RequestParse.cpp  Response.cpp  Response.hpp  Utils.cpp  Utils.hpp
signal/: Makefile  Signal.cpp  Signal.hpp
socket/: Server.cpp  Server.hpp  Timer.cpp  Timer.hpp
soket/: Makefile  Server.cpp  Server.hpp
test_timeout/: a.out
yichinos/: .gitignore  ExclusivePath.cpp  Locations.cpp  Locations.hpp  MainConfig.cpp  MainConfig.hpp  Makefile  Servers.cpp  Servers.hpp  a.out  main.cpp  test.sh  testMainconfig.cpp  webserv
(+70 files in other folders)
